<resources>
    <string name="app_name">Movie Manager</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="finish">Finish</string>
    <string name="Add">Add</string>
    <string name="card_description">Press for more details</string>
    <string name="card_movie_release">Movie release year</string>
    <string name="card_Movie_Title">Main item title</string>
    <string name="frag1_App_name">Movie Manager</string>
    <string name="frag1_add_movie_btn">Add Movie</string>
    <string name="movie_image_preview_form">Movie image preview</string>
    <string name="pick_image_form">Pick Image</string>
    <string name="enter_movie_title_form">Enter Movie Title</string>
    <string name="movie_description_form">Enter Movie Description</string>
    <string name="movie_release_year_form">Enter Movie Release Year</string>
    <string name="rating_form">Rating:</string>
    <string name="finish_form">Finish</string>
    <string name="enter_movie_genre_form">Enter Movie Genre</string>
    <string name="movie_title_details">Title: </string>
    <string name="move_description_details">Description: </string>
    <string name="year_movie_details">Year: </string>
    <string name="genre_movie_details">Genre: </string>
    <string name="rating_movie_details">Rating: </string>
    <string name="delete_movie_title">Delete Movie</string>
    <string name="delete_movie_message">Are you sure you want to delete this movie?</string>
    <string name="delete_movie_positive">Yes</string>
    <string name="delete_movie_negative">No</string>
    <string name="movie_deleted_toast">Movie deleted</string>
    <string name="filling_toast">Please fill in all fields</string>
</resources>