<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".ui.add_movie.MovieForm"
        android:id="@+id/movie_form"
        android:background="@drawable/gradiant_color">


    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/moviepick"
            android:id="@+id/result_image"
            android:contentDescription="@string/movie_image_preview_form" />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pick_image_form"
            android:id="@+id/image_btn"
            android:textColor="@color/white"
            android:backgroundTint="@color/gradintpurp"/>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/MovieTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_movie_title_form"
                android:background="@drawable/gradiant_color_bluish"
                android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/MovieDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/movie_description_form"
                tools:ignore="TouchTargetSizeCheck"
                android:background="@drawable/gradiant_color_bluish"
                android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/MovieYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/movie_release_year_form"
                android:background="@drawable/gradiant_color_bluish"
                android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">
    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/MovieGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_movie_genre_form"
            android:background="@drawable/gradiant_color_bluish"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/gradiant_color_bluish">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/rating_form"
            android:textSize="25sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"/>


    <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1"
            android:rating="5"
            android:progressTint="@color/yellow"
            android:progressBackgroundTint="@color/black"
            android:layout_margin="8dp"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:isIndicator="false"/>

</LinearLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="55dp"
            android:minHeight="55dp"
            android:id="@+id/finish_edit"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/finish_form"
            android:backgroundTint="@color/gradintpurp"
            android:textColor="@color/white"/>

</LinearLayout>

</ScrollView>