<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="10dp"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.single_movie.MovieDetails"
        android:id="@+id/movie_details"
        android:background="@drawable/gradiant_color">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="20dp">
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradiant_color">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


            <ImageView
                    android:layout_margin="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:id="@+id/item_image"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_title"
                    android:text="@string/movie_title_details"
                    android:textColor="@color/black"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="30sp"
                    android:layout_margin="10dp"
                    android:textStyle="bold"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_desc"
                    android:text="@string/move_description_details"
                    android:textColor="@color/black"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="25sp"
                    android:layout_margin="10dp"
                    android:textStyle="italic"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_year"
                    android:text="@string/year_movie_details"
                    android:textColor="@color/black"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="25sp"
                    android:layout_margin="10dp"
                    android:textStyle="italic"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_genre"
                    android:text="@string/genre_movie_details"
                    android:textColor="@color/black"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="25sp"
                    android:layout_margin="10dp"
                    android:textStyle="italic"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating_movie_details"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp" />


                <RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:progressTint="@color/yellow"
                        android:progressBackgroundTint="@color/black"
                        android:numStars="5"
                        android:stepSize="1"
                        android:rating="5"
                        android:layout_margin="8dp"
                        android:scaleX="0.8"
                        android:scaleY="0.8"
                        android:isIndicator="true"/>

            </LinearLayout>
        </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>